--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
 	<!-- google fonts  -->
 	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,500i,600,700|IBM+Plex+Serif:500i" rel="stylesheet">
 
+	<!-- fontawesome -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
 </head>
 <body>
 
 	<!-- ===== NAV ===== -->
 	<nav>
 		<div class="logo-container">
-			<img src="assets/images/logo.png" class="logo">
+			<!-- <img src="assets/images/logo.png" class="logo"> -->
+			<i class="fas fa-stroopwafel"></i>
+			<h1>Old Diner</h1>
 		</div>
 
 		<ul>
@@ -37,39 +42,42 @@
 		<!-- ===== BANNER ===== -->
 		<section  class="banner">
 			<div class="box">				
-				<h1>The Website.</h1>
-				<p>This is a simple website layout utilizing css positions and floats</p>				
+				<h1 class="bar">Beyond Taste</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>				
 			</div>
 		</section><!--  end of Banner section-->
 		
 		<!-- ===== ABOUT ===== -->
 		<section id="about" class="about">
-			<h2 >About</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			<div class="left">
+				<h2 >About</h2>
+				<!-- <div class="text-content"> -->
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			
+				<!-- </div> -->
+			</div>
+
+			<div class="right">
+				<img src="assets/images/img-about.jpg">					
+			</div>
+
+			
+
 		</section><!--  end of About section-->
 
 		<!-- ===== PROJECTS ===== -->
 		<section id="projects"  class="projects">
 			<div class="box2">				
 				<h2>The future of tradition</h2>
-				<p>This is a simple website layout utilizing css positions and floats</p>				
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>				
 			</div>
 		</section><!--  end of Projects section-->
 
