--- a/index.html
+++ b/index.html
@@ -112,28 +112,28 @@
 			<h2 >Gallery </h2>
 
 			<div class="column">
-				<img src="assets/images/bg-banner.jpg" alt="gallery 1">
+				<img src="assets/images/food1.jpg" alt="gallery 1">
 				<h3>Item 1</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
 			</div>
 			<div class="column">
-				<img src="assets/images/bg-banner.jpg" alt="gallery 2">
+				<img src="assets/images/food2.jpg" alt="gallery 2">
 				<h3>Item 2</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
 			</div>
 			<div class="column">
-				<img src="assets/images/bg-banner.jpg" alt="gallery 3">
+				<img src="assets/images/food3.jpg" alt="gallery 3">
 				<h3>Item 3</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
 			</div>
 			<div class="column">
-				<img src="assets/images/bg-banner.jpg" alt="gallery 4">
+				<img src="assets/images/food4.jpeg" alt="gallery 4">
 				<h3>Item 4</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
