--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 		<!-- ===== PROJECTS ===== -->
 		<section id="projects"  class="projects">
-			<div class="box2 bar3">				
+			<div class="box2">				
 				<h2>The Future of Tradition</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>				
