contact section update

--- a/index.html
+++ b/index.html
@@ -142,25 +142,25 @@
 		<!-- ===== SERVICES ===== -->
 		<section id="services" class="services clear">
 
-			<div class="contact-container">
-				<h2>Contact Us</h2>
-
+			<h2>Contact Us</h2>
+			<div class="form-content">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi suscipit nobis aliquid esse autem dolores minus
 					nulla iure. Ad neque velit quibusdam consequuntur architecto veritatis odio, magnam pariatur repellat impedit.</p>
-
-				<div class="form-container">
-					<form action="" method="">
-						<label for="name">Your Name:</label>
-						<input id="name" type="text" name="name">
-						<label for="email">Your Email:</label>
-						<input id="email" type="email" name="email">
-						<label for="subject">Subject:</label>
-						<input id="subject" type="text" name="subject">
-						<textarea name="comment" id="comment" placeholder="Write your message here..."></textarea>
-						<button>Send my Message</button>
-					</form>
-				</div>
 			</div>
+			<div class="form-container">
+				<form action="" method="">
+					<label for="name">Your Name:</label>
+					<input id="name" type="text" name="name">
+					<label for="email">Your Email:</label>
+					<input id="email" type="email" name="email">
+					<label for="subject">Subject:</label>
+					<input id="subject" type="text" name="subject">
+					<label>Message:</label>
+					<textarea name="comment" id="comment" placeholder="Write your message here..."></textarea>
+					<input type="submit" value="Send my Message">
+				</form>
+			</div>
+
 
 			<!-- 			<div class="column">
 				<img src="assets/images/bg-banner.jpg" alt="service 1">
