--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span></p>
+							proident, sunt in culpa qui officia deserunt.</span></p>
 
 				</div>
 			</div>
@@ -142,7 +142,7 @@
 		<!-- ===== SERVICES ===== -->
 		<section id="services" class="services clear">
 
-			<h2>Contact Us</h2>
+			<h2>Contact</h2>
 			<div class="form-content">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi suscipit nobis aliquid esse autem dolores minus
 					nulla iure. Ad neque velit quibusdam consequuntur architecto veritatis odio, magnam pariatur repellat impedit.</p>
