update web responsive design

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
 	<title>Wireframe Activity</title>
@@ -143,7 +143,7 @@
 		<section id="services" class="services clear">
 
 			<h2>Contact</h2>
-			<div class="form-content">
+			<div class="form-content clear">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi suscipit nobis aliquid esse autem dolores minus
 					nulla iure. Ad neque velit quibusdam consequuntur architecto veritatis odio, magnam pariatur repellat impedit.</p>
 			</div>
