--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@
 
 			<h2>Contact</h2>
 			<div class="form-content clear">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi suscipit nobis aliquid esse autem dolores minus
-					nulla iure. Ad neque velit quibusdam consequuntur architecto veritatis odio, magnam pariatur repellat impedit.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi suscipit nobis aliquid esse autem dolores minus la iure.</p>
 			</div>
 			<div class="form-container">
 				<form action="" method="">
